# VelocityPTrader

./: .flake8  .gitignore  .pre-commit-config.yaml  AI_Trading_Dashboard.bat  Makefile  PRODUCTION_ARCHITECTURE.md  PRODUCTION_READY.md  README.md  REAL_TIME_RL_SETUP.md  advanced_performance_metrics.py  alembic.ini  analyze_symbol_differences.py  atomic_model_persistence.py  defensive_safety.py  demo_dual_agents.py  direct_mt5_symbols.py  docker-compose.yml  dual_agent_rl_system.py  enhanced_backtest_with_trade_capture.py  error_log.md  fetch_all_mt5_symbols.py  final_market_analysis.py  fix_real_data.py  fix_windows_access.py  install_trading_system.sh  integrated_dual_agent_system.py  integrated_rl_trading_system.py  intelligent_experience_replay.py  market_watch_analyzer.py  minimal_server.py  monitoring_dashboard.py  performance_metrics.json  port_manager.py  production_system.out  prometheus.yml  push_to_github.sh  pyproject.toml  quickstart.py  real_mt5_connector.py  real_time_rl_system.py  (+28 more)
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  security_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-recovery.yml  ci.yml  codeql.yml  postgresql-ci.yml
agents/: dual_agent_rl_system.py
analysis/: comprehensive_results_analyzer.py
backtesting/: multi_timeframe_engine.py
certs/: server.crt  simple_dashboard.crt
config/: backtest_config.json  enterprise_config.json  mt5_config.json  mt5_config.json.example  system_config.json
core/: mt5_data_pipeline.py  symbol_manager.py
dashboard/: enterprise_dashboard.py
data/: mt5_bridge.py  mt5_connector_custom.py  mt5_marketwatch_integration.py
docs/: WORKFLOW_AUTO_RECOVERY.md  WORKFLOW_AUTO_RECOVERY_QUICKSTART.md
migrations/: env.py  script.py.mako
monitoring/: README.md  docker-compose.yml  prometheus_exporter.py
monitoring/grafana/dashboards/: agent_performance_rl.json  dual_agent_comparison.json  instrument_physics_view.json  market_regime_physics.json  portfolio_risk_overview.json  risk_engine_circuit.json  risk_management.json  run_control_meta.json  system_health.json  trading_performance.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/prometheus/: alert_rules.yml  alertmanager.yml  prometheus.yml
physics/: comprehensive_friction_engine.py  enhanced_friction_calculator.py  symbol_aware_friction_calculator.py
reporting/: instrument_performance_reporter.py
reports/: final_findings_and_recommendations.md  statistical_validation_report.md
reports/instruments/: BTCUSD_performance_report.html  ETHUSD_performance_report.html  EURUSD_performance_report.html  GBPUSD_performance_report.html  GER40_performance_report.html  NAS100_performance_report.html  SPX500_performance_report.html  US30_performance_report.html  USDJPY_performance_report.html  USOIL_performance_report.html  XAGUSD_performance_report.html  XAUUSD_performance_report.html  summary_performance_dashboard.html
results/: enhanced_backtest_results.json  test_backtest_results.json  trade_pattern_analysis_report.html
results/real_trade_reports/: BTCUSD_real_performance_report.html  ETHUSD_real_performance_report.html  EURUSD_real_performance_report.html  GBPUSD_real_performance_report.html  GER40_real_performance_report.html  NAS100_real_performance_report.html  US30_real_performance_report.html  XAUUSD_real_performance_report.html
rl_framework/: advanced_performance_metrics.py  backtest_data_integrator.py  enhanced_rl_agent.py  intelligent_experience_replay.py  reward_shaping_engine.py  rl_learning_integration.py  trade_pattern_analyzer.py
rl_models/agents/: BERSERKER_AUDCAD+_H1.pkl  BERSERKER_AUDCAD+_M15.pkl  BERSERKER_AUDCAD+_M5.pkl  BERSERKER_AUDCHF+_H1.pkl  BERSERKER_AUDCHF+_M15.pkl  BERSERKER_AUDCHF+_M5.pkl  BERSERKER_AUDJPY+_H1.pkl  BERSERKER_AUDJPY+_M15.pkl  BERSERKER_AUDJPY+_M5.pkl  BERSERKER_AUDUSD+_H1.pkl  BERSERKER_AUDUSD+_M15.pkl  BERSERKER_AUDUSD+_M5.pkl  BERSERKER_AUDUSD_H1.pkl  BERSERKER_AUDUSD_M15.pkl  BERSERKER_AUDUSD_M5.pkl  BERSERKER_BCHJPY_H1.pkl  BERSERKER_BCHJPY_M15.pkl  BERSERKER_BCHJPY_M5.pkl  BERSERKER_BCHUSD_H1.pkl  BERSERKER_BCHUSD_M15.pkl  BERSERKER_BCHUSD_M5.pkl  BERSERKER_BTCUSD+_H1.pkl  BERSERKER_BTCUSD+_M15.pkl  BERSERKER_BTCUSD+_M5.pkl  BERSERKER_BTCUSD_H1.pkl  BERSERKER_BTCUSD_M15.pkl  BERSERKER_BTCUSD_M5.pkl  BERSERKER_CADCHF+_H1.pkl  BERSERKER_CADCHF+_M15.pkl  BERSERKER_CADCHF+_M5.pkl  BERSERKER_CADJPY+_H1.pkl  BERSERKER_CADJPY+_M15.pkl  BERSERKER_CADJPY+_M5.pkl  BERSERKER_DJ30_H1.pkl  BERSERKER_DJ30_M15.pkl  BERSERKER_DJ30_M5.pkl  BERSERKER_DJ30ft_H1.pkl  BERSERKER_DJ30ft_M15.pkl  BERSERKER_DJ30ft_M5.pkl  BERSERKER_ETHUSD+_H1.pkl  (+368 more)
src/agents/: dual_agent_system.py
src/core/: data_pipeline.py  integrated_system.py  optimized_system.py  real_data_pipeline.py
src/data/: __init__.py  mt5_resilient_connection.py
src/database/: __init__.py  connection.py  models.py  operations.py
src/utils/: __init__.py  ai_recovery_agent.py  enterprise_logging.py  logging_system.py  performance_dashboard.py  resilience.py  workflow_failure_analyzer.py
tests/: test_framework.py  test_phase2_pipeline.py  test_phase3_agents.py  test_phase4_integration.py  test_workflow_failure_analyzer.py
tests/database/: test_database_models.py
