[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "velocity-trader"
version = "1.0.0"
description = "Physics-based AI Trading System with Real MT5 Integration"
authors = [
    {name = "VelocityTrader Team", email = "noreply@velocitytrader.ai"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["trading", "ai", "mt5", "physics", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[tool.setuptools]
packages = ["src"]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    # directories
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | models
  | rl_models
  | logs
  | results
  | reports
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]
known_third_party = [
    "numpy", "pandas", "torch", "MetaTrader5", "psutil", 
    "structlog", "aiohttp", "websockets", "pytest"
]
skip_glob = [
    "**/venv/**", "**/models/**", "**/rl_models/**", 
    "**/logs/**", "**/results/**", "**/reports/**"
]

# Ruff configuration
[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "S",   # bandit/security
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "N",   # pep8-naming
    "D",   # pydocstyle
    "PERF", # perflint
    "RUF",  # ruff-specific
]
ignore = [
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D102", # Missing docstring in public method
    "D103", # Missing docstring in public function
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "S101", # Use of assert detected (OK in tests)
    "T201", # Print statements (OK for logging)
    "B008", # Do not perform function calls in argument defaults
]
exclude = [
    ".git", ".mypy_cache", ".ruff_cache", ".venv", "__pycache__",
    "venv", "models", "rl_models", "logs", "results", "reports"
]
fixable = ["ALL"]

[tool.ruff.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # asserts allowed in tests
    "S106",  # hardcoded passwords in tests are OK
    "D",     # no docstring requirements for tests
]
"**/__init__.py" = ["D104"]  # no docstring required for __init__.py

[tool.ruff.pydocstyle]
convention = "google"

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_error_context = true
pretty = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "MetaTrader5",
    "pyopencl",
    "matplotlib.*",
    "plotly.*",
]
ignore_missing_imports = true

# Exclude problematic directories
exclude = [
    "venv/.*",
    "models/.*",
    "rl_models/.*",
    "logs/.*",
    "results/.*",
    "reports/.*",
]

# Pylint configuration
[tool.pylint.main]
jobs = 0  # Use all available processors
load-plugins = [
    "pylint.extensions.bad_builtin",
    "pylint.extensions.check_elif",
    "pylint.extensions.docparams",
    "pylint.extensions.overlapping_exceptions",
    "pylint.extensions.redefined_variable_type",
]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name (for mathematical variables)
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "W0613",  # unused-argument
    "C0415",  # import-outside-toplevel (sometimes needed)
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 10
max-attributes = 15
max-branches = 15
max-locals = 20
max-parents = 10
max-public-methods = 25
max-returns = 8
max-statements = 60

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*", 
    "*/venv/*", 
    "*/models/*", 
    "*/rl_models/*",
    "*/__pycache__/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", "models", "rl_models", "logs", "results", "reports"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection in specific contexts

[tool.bandit.assert_used]
skips = ["*/tests/*"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--strict-markers", 
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security tests",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]